feat(gemini): Optimize Gemini API for faster, more creative responses
Updated the Gemini model to `gemini-3-flash-preview` and adjusted the temperature to `1` for quicker generation and more creative output. The `googleSearch` tool is now explicitly enabled to enhance data retrieval capabilities.

Also, corrected the script path in `index.html` to resolve correctly in production environments.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,6 @@
     <div class="nebula-container"></div>
     <div class="nebula-mist"></div>
     <div id="root"></div>
-    <!-- Removed leading slash for better production path resolution -->
-    <script type="module" src="index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
