--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
             animation: logo-pulse 3s infinite ease-in-out;
         }
         @keyframes logo-pulse {
-            0%, 100% { filter: drop-shadow(0 0 5px rgba(34, 211, 238, 0.3)); }
-            50% { filter: drop-shadow(0 0 20px rgba(34, 211, 238, 0.6)); }
+            0%, 100% { filter: drop-shadow(0 0 5px rgba(34, 211, 238, 0.3)); transform: scale(1); }
+            50% { filter: drop-shadow(0 0 20px rgba(34, 211, 238, 0.6)); transform: scale(1.05); }
         }
     </style>
 <script type="importmap">
