Add astronaut helmet SVG favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COSMIC CR8T1V3 | TACTICAL BRIDGE</title>
     <!-- Custom Favicon from User PNG -->
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Michroma&family=Plus+Jakarta+Sans:wght@200;400;700;800&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <style>
